worked on shop and product pages

--- a/shop.html
+++ b/shop.html
@@ -82,7 +82,7 @@
 
       <h1>Shop</h1>
 
-      <!--Should all the jackets link to the product specific page?-->
+      <!--Should all the jackets link to the product specific page? I have made jacket pages for the two first-->
       <!--Should I add basket icon to the containers?-->
       <section class="shop">
 
@@ -94,11 +94,13 @@
         </div>
         </a>
 
-        <div class="shop-container">
-          <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
-          <p>RunnerPluss jacket</p>
-          <p class="bold orange">NOK 999</p>
-        </div>
+        <a href="products/runnerpluss.html">
+          <div class="shop-container">
+            <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
+            <p>RunnerPluss jacket</p>
+            <p class="bold orange">NOK 999</p>
+          </div>  
+        </a>
 
         <div class="shop-container">
           <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
