--- a/products/runnerpluss.html
+++ b/products/runnerpluss.html
@@ -85,7 +85,7 @@
       <section class="product-specific">
         <div class="product-image-container">
           <div class="product-image-container">
-            <img src="../assets/products/jacket-2.png" alt="xplorer fleece jacket" class="product-image">
+            <img src="../assets/products/jacket-2.png" alt="a light black jacket with a with logo on the chest" class="product-image">
           </div>  
         </div>
         <div class="product-info">
