--- a/about-us.html
+++ b/about-us.html
@@ -79,26 +79,26 @@
         </nav>  
       </section>
 
-      <h1>About us</h1>
+      <h1 tabindex="0">About us</h1>
 
       <section class="about-us">
 
-        <div>
+        <div tabindex="0">
           <img src="assets/images/friends-header.png" alt="two girls overlooking a river">
         </div>
-        <div>
+        <div tabindex="0">
           <p>Welcome to Rainy Days, where we believe that every adventure is an opportunity to embrace the elements and push the boundaries of what's possible. Founded by two adventurous female friends, our brand is on a mission to empower outdoor enthusiasts with premium-quality jackets designed for every weather condition and activity.</p>
         </div>
-        <div>
+        <div tabindex="0">
           <h2>Our story</h2>
           <p>It all began with a shared love for the great outdoors and a desire to create gear that could keep up with our passion for adventure. As avid hikers, climbers, and outdoor enthusiasts, we often found ourselves facing unpredictable weather conditions that tested our gear and determination. Frustrated by the lack of options that combined style, durability, and functionality, we decided to take matters into our own hands and create our own jackets.</p>
           <p>Armed with a vision and a relentless spirit of innovation, we embarked on a journey to design jackets that could withstand the toughest of elements while keeping us comfortable and stylish. From the drawing board to the trails, we poured our hearts and souls into every detail, ensuring that each jacket met our high standards of quality and performance.</p>  
         </div>
         <div class="about-end">
-          <div class="about-end-img">
+          <div class="about-end-img" tabindex="0">
             <img src="assets/images/friends.png" alt="two girls sitting on top of a mountain">
           </div>
-          <div class="about-end-text">
+          <div class="about-end-text" tabindex="0">
             <h2>Our philosophy</h2>
             <p>At Rainy Days, we believe that the best adventures often begin when the forecast calls for rain. Our jackets are more than just outerwear - they're a symbol of our commitment to living life to the fullest and embracing every moment, rain or shine. Whether you're scaling a mountain peak, paddling through rapids, or simply enjoying a leisurely stroll in the park, our jackets are designed to keep you dry, comfortable, and ready for anything.</p>
             <p>Join us on our journey as we continue to push the boundaries of outdoor apparel and inspire others to chase their dreams, conquer their fears, and make every day an adventure worth remembering.</p>  
@@ -186,7 +186,7 @@
             <p>Join the Rainydays community!</p>
           </div>
           <div class="newsletter-mail">
-            <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
+            <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
             <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>
