--- a/checkout-success.html
+++ b/checkout-success.html
@@ -84,15 +84,15 @@
       </nav>
     </section> 
 
-    <h1>Your order has been confirmed!</h1>
+    <h1 tabindex="0">Your order has been confirmed!</h1>
 
     <section class="checkout-success">
 
-      <div>
+      <div tabindex="0">
         <img src="assets/icons/checkmark.png" class="checkmark" alt="large rainydays blue checkmark">
       </div>
 
-      <div>
+      <div tabindex="0">
         <p>Congratulations! Your order with RainyDays has been successfully confirmed. Thank you for choosing us to be part of your outdoor adventures.</p>
         <p>Our team is working hard to prepare your order for shipment. You will receive a confirmation email with tracking information once your order has been processed and shipped.</p>
         <p>Keep an eye on your email inbox for updates about your order, and don't hesitate to reach out to our customer service team if you have any questions or concerns. We're here to help!</p>
@@ -181,7 +181,7 @@
           <p>Join the Rainydays community!</p>
         </div>
         <div class="newsletter-mail">
-          <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
+          <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
           <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
