--- a/checkout.html
+++ b/checkout.html
@@ -84,7 +84,7 @@
 
     <h1>Checkout</h1>
     
-    <section>
+    <section tabindex="0">
       <div class="checkout-title">
         <p class="checkout-number">1</p>
         <h2>Shopping cart</h2>  
@@ -112,7 +112,7 @@
       </div>
     </section>
 
-    <section>
+    <section tabindex="0">
       <div class="checkout-title">
         <p class="checkout-number">2</p>
         <h2>Shipping-information</h2>  
@@ -142,7 +142,7 @@
       </div>
     </section>
 
-    <section>
+    <section tabindex="0">
       <div class="checkout-title">
         <p class="checkout-number">3</p>
         <h2>Delivery</h2>  
@@ -171,7 +171,7 @@
       </div>
     </section>
 
-    <section>
+    <section tabindex="0">
       <div class="checkout-title">
         <p class="checkout-number">4</p>
         <h2>Payment</h2>
@@ -202,7 +202,7 @@
       </div>
     </section>
 
-    <section>
+    <section tabindex="0">
       <div class="checkout-title">
         <p class="checkout-number">5</p>
         <h2>Order summary</h2>
@@ -303,7 +303,7 @@
           <p>Join the Rainydays community!</p>
         </div>
         <div class="newsletter-mail">
-          <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
+          <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
           <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
             <!--need to make an overlay when pressed-->
         </div>
