--- a/shop.html
+++ b/shop.html
@@ -24,8 +24,8 @@
           <span></span>
           <div class="hamburger-menu-links">
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="shop.html" class="active">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
@@ -41,8 +41,8 @@
         <section class="desktop-nav">
           <nav>
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="shop.html" class="active">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
@@ -83,11 +83,10 @@
       <h1>Shop</h1>
 
       <!--Should all the jackets link to the product specific page? I have made jacket pages for the two first-->
-      <!--Should I add basket icon to the containers?-->
       <section class="shop">
 
         <a href="products/xplorer-fleece.html">
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-1.png" alt="a fleece jacket in the color evening green, with full front zip">
           <p>Xplorer fleece jacket</p>
           <p class="bold orange">NOK 1499</p>
@@ -95,38 +94,38 @@
         </a>
 
         <a href="products/runnerpluss.html">
-          <div class="shop-container">
+          <div class="shop-container" tabindex="0">
             <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
             <p>RunnerPluss jacket</p>
             <p class="bold orange">NOK 999</p>
           </div>  
         </a>
 
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
           <p>RacerPro jacket</p>
           <p class="bold orange">NOK 1599</p>
         </div>
 
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-4.png" alt="a jacket with extra padding and waistline belt, in the color orange and grey">
           <p>Adventurer jacket</p>
           <p class="bold orange">NOK 1499</p>
         </div>
 
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-5.png" alt="a black jacket with a wite stripe over the chest">
           <p>Softshell explorer jacket</p>
           <p class="bold orange">NOK 999</p>
         </div>
 
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-6.png" alt="a lightgrey jacket with full front-zip and waistline stretch">
           <p>Everyday weather jacket</p>
           <p class="bold orange">NOK 1599</p>
         </div>
 
-        <div class="shop-container">
+        <div class="shop-container" tabindex="0">
           <img src="assets/products/jacket-7.png" alt="a dark grey jacket with pockets on the chest">
           <p>TrackerPro jacket</p>
           <p class="bold orange">NOK 1499</p>
@@ -213,7 +212,7 @@
             <p>Join the Rainydays community!</p>
           </div>
           <div class="newsletter-mail">
-            <input type="text"  class="newsletter-mail-input"placeholder="example@ma il.com">
+            <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
             <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
               <!--need to make an overlay when pressed-->
           </div>
