fixed links and some comments

--- a/about-us.html
+++ b/about-us.html
@@ -23,9 +23,9 @@
           <span></span>
           <div class="hamburger-menu-links">
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
-              <li><a href="about-us.html">About</a></li>
+              <li><a href="about-us.html" class="active">About</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </div>     
@@ -40,9 +40,9 @@
         <section class="desktop-nav">
           <nav>
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
-              <li><a href="about-us.html">About</a></li>
+              <li><a href="about-us.html" class="active">About</a></li>
               <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </nav>
@@ -74,7 +74,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-us.html" class="bold">About</a></li>
+            <li><a href="about-us.html" class="active">About</a></li>
           </ul>
         </nav>  
       </section>
