--- a/checkout-success.html
+++ b/checkout-success.html
@@ -24,7 +24,7 @@
         <span></span>
         <div class="hamburger-menu-links">
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about-us.html">About</a></li>
             <li><a href="contact-us.html">Contact</a></li>
@@ -41,7 +41,7 @@
       <section class="desktop-nav">
         <nav>
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="shop.html">Shop</a></li>
             <li><a href="about-us.html">About</a></li>
             <li><a href="contact-us.html">Contact</a></li>
@@ -78,8 +78,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
           <li><a href="checkout.html">Checkout</a></li>
-          <li><a href="checkout-success.html" class="bold">Checkout success</a></li>
-          <!--The checkout success gets on two lines ...-->
+          <li><a href="checkout-success.html" class="active">Checkout success</a></li>
         </ul>
       </nav>
     </section> 
