--- a/contact-us.html
+++ b/contact-us.html
@@ -23,10 +23,10 @@
           <span></span>
           <div class="hamburger-menu-links">
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="contact-us.html" class="active">Contact</a></li>
             </ul>
           </div>     
         </section>
@@ -40,10 +40,10 @@
         <section class="desktop-nav">
           <nav>
             <ul>
-              <li><a href="index.html" class="active">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html">Contact</a></li>
+              <li><a href="contact-us.html" class="active">Contact</a></li>
             </ul>
           </nav>
         </section>
