--- a/index.html
+++ b/index.html
@@ -78,16 +78,17 @@
         <a href="shop.html" class="cta-orange">Go to shop</a>
       </section>
       
-      <!-- Link this section to the shop? -->
-      <section class="sale" tabindex="0">
-        <div class="sale-info">
-            <p class="sale-title">End of season <span class="orange">sale</span></p>
-            <p class="sale-text">Get up to <span class="orange sale-percent">50% off</span></p>
-        </div>
-        <div class="sale-image-container">
-          <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image">
-        </div>
-      </section>
+      <a href="shop.html">
+        <section class="sale" tabindex="0">
+          <div class="sale-info">
+              <p class="sale-title">End of season <span class="orange">sale</span></p>
+              <p class="sale-text">Get up to <span class="orange sale-percent">50% off</span></p>
+          </div>
+          <div class="sale-image-container">
+            <img src="assets/images/sale-image.jpg" alt="man and woman standing on top of a mountain" class="sale-image">
+          </div>
+        </section>  
+      </a>
 
       <section class="shop">
         <p class="title">Shop our latest trends</p>
@@ -110,34 +111,54 @@
       </section>
 
       <section class="activity"> 
-        <!--Should all the activities link to the shop page?-->
         <p class="title">Shop by activity</p>
+
         <div class="activity-section">
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/hiking.jpg" alt="a woman hiking in the mountains" class="activity-image">
-            <p class="activity-button">Hiking</p>
-          </div>
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/running.jpg" alt="four friends running" class="activity-image">
-            <p class="activity-button">Running</p>
-          </div>
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/canooing.jpg" alt="a couple sitting in a canoo" class="activity-image">
-            <p class="activity-button">Canooing</p>
-          </div>
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/cyckling.jpg" alt="a man riding a bicycle on a road" class="activity-image">
-            <p class="activity-button">Cyckling</p>
-          </div>
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/sailing.jpg" alt="a couple on a sailboat" class="activity-image">
-            <p class="activity-button">Sailing</p>
-          </div>
-          <div class="activity-container" tabindex="0">
-            <img src="assets/images/skiing.jpg" alt="a woman skiing down a mountainside" class="activity-image">
-            <p class="activity-button">Skiing</p>
-          </div>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/hiking.jpg" alt="a woman hiking in the mountains" class="activity-image">
+              <p class="activity-button">Hiking</p>
+            </div>  
+          </a>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/running.jpg" alt="four friends running" class="activity-image">
+              <p class="activity-button">Running</p>
+            </div>  
+          </a>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/canooing.jpg" alt="a couple sitting in a canoo" class="activity-image">
+              <p class="activity-button">Canooing</p>
+            </div>  
+          </a>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/cyckling.jpg" alt="a man riding a bicycle on a road" class="activity-image">
+              <p class="activity-button">Cyckling</p>
+            </div>  
+          </a>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/sailing.jpg" alt="a couple on a sailboat" class="activity-image">
+              <p class="activity-button">Sailing</p>
+            </div>  
+          </a>
+
+          <a href="shop.html">
+            <div class="activity-container" tabindex="0">
+              <img src="assets/images/skiing.jpg" alt="a woman skiing down a mountainside" class="activity-image">
+              <p class="activity-button">Skiing</p>
+            </div>  
+          </a>
+
         </div>
+
         <div class="browse-more">
           <a href="shop.html" class="cta-blue">Browse more</a>
         </div>
