--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -24,7 +24,7 @@
           <span></span>
           <div class="hamburger-menu-links">
             <ul>
-              <li><a href="../index.html" class="active">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="../shop.html">Shop</a></li>
               <li><a href="../about-us.html">About</a></li>
               <li><a href="../contact-us.html">Contact</a></li>
@@ -41,7 +41,7 @@
         <section class="desktop-nav">
           <nav>
             <ul>
-              <li><a href="../index.html" class="active">Home</a></li>
+              <li><a href="../index.html">Home</a></li>
               <li><a href="../shop.html">Shop</a></li>
               <li><a href="../about-us.html">About</a></li>
               <li><a href="../contact-us.html">Contact</a></li>
@@ -77,7 +77,7 @@
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../shop.html">Shop</a></li>
-            <li><a href="../products/xplorer-fleece.html" class="bold">Xplorer fleece jacket</a></li>
+            <li><a href="../products/xplorer-fleece.html" class="active">Xplorer fleece jacket</a></li>
           </ul>
         </nav>  
       </section> 
