--- a/shop.html
+++ b/shop.html
@@ -75,14 +75,13 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html" class="bold">Shop</a></li>
+            <li><a href="shop.html" class="active">Shop</a></li>
           </ul>
         </nav>  
       </section>
 
       <h1>Shop</h1>
 
-      <!--Should all the jackets link to the product specific page? I have made jacket pages for the two first-->
       <section class="shop">
 
         <a href="products/xplorer-fleece.html">
@@ -93,7 +92,7 @@
         </div>
         </a>
 
-        <a href="products/runnerpluss.html">
+        <a href="products/xplorer-fleece.html">
           <div class="shop-container" tabindex="0">
             <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
             <p>RunnerPluss jacket</p>
@@ -101,35 +100,45 @@
           </div>  
         </a>
 
-        <div class="shop-container" tabindex="0">
-          <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
-          <p>RacerPro jacket</p>
-          <p class="bold orange">NOK 1599</p>
-        </div>
+        <a href="products/xplorer-fleece.html">
+          <div class="shop-container" tabindex="0">
+            <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
+            <p>RacerPro jacket</p>
+            <p class="bold orange">NOK 1599</p>
+          </div>  
+        </a>
 
-        <div class="shop-container" tabindex="0">
-          <img src="assets/products/jacket-4.png" alt="a jacket with extra padding and waistline belt, in the color orange and grey">
-          <p>Adventurer jacket</p>
-          <p class="bold orange">NOK 1499</p>
-        </div>
+        <a href="products/xplorer-fleece.html">
+          <div class="shop-container" tabindex="0">
+            <img src="assets/products/jacket-4.png" alt="a jacket with extra padding and waistline belt, in the color orange and grey">
+            <p>Adventurer jacket</p>
+            <p class="bold orange">NOK 1499</p>
+          </div>  
+        </a>
 
-        <div class="shop-container" tabindex="0">
-          <img src="assets/products/jacket-5.png" alt="a black jacket with a wite stripe over the chest">
-          <p>Softshell explorer jacket</p>
-          <p class="bold orange">NOK 999</p>
-        </div>
+        <a href="products/xplorer-fleece.html">
+          <div class="shop-container" tabindex="0">
+            <img src="assets/products/jacket-5.png" alt="a black jacket with a wite stripe over the chest">
+            <p>Softshell explorer jacket</p>
+            <p class="bold orange">NOK 999</p>
+          </div>  
+        </a>
 
-        <div class="shop-container" tabindex="0">
-          <img src="assets/products/jacket-6.png" alt="a lightgrey jacket with full front-zip and waistline stretch">
-          <p>Everyday weather jacket</p>
-          <p class="bold orange">NOK 1599</p>
-        </div>
+        <a href="products/xplorer-fleece.html">
+          <div class="shop-container" tabindex="0">
+            <img src="assets/products/jacket-6.png" alt="a lightgrey jacket with full front-zip and waistline stretch">
+            <p>Everyday weather jacket</p>
+            <p class="bold orange">NOK 1599</p>
+          </div>  
+        </a>
 
-        <div class="shop-container" tabindex="0">
-          <img src="assets/products/jacket-7.png" alt="a dark grey jacket with pockets on the chest">
-          <p>TrackerPro jacket</p>
-          <p class="bold orange">NOK 1499</p>
-        </div>
+        <a href="products/xplorer-fleece.html">
+          <div class="shop-container" tabindex="0">
+            <img src="assets/products/jacket-7.png" alt="a dark grey jacket with pockets on the chest">
+            <p>TrackerPro jacket</p>
+            <p class="bold orange">NOK 1499</p>
+          </div>  
+        </a>
 
       </section>
 
