--- a/newsletter.html
+++ b/newsletter.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact us at Rainydays">
-    <title>Rainydays | Contact us</title>
+    <meta name="description" content="Thanks for subscribing to the Rainydays newsletter">
+    <title>Rainydays | Newsletter</title>
     <link rel="stylesheet" href="css/_variables.css">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header-footer.css">
@@ -74,75 +74,22 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="contact-us.html" class="bold">Contact</a></li>
+            <li><a href="contact-us.html">Contact</a></li>
+            <li>Newsletter subscription</li>
           </ul>
         </nav>  
       </section>
 
-      <h1>Contact us</h1>
-
-      <section class="contact-head">
-        <p>Our team is there for you, and will answer all inquirees as soon as possible. Check out our most frequently asked questions, or contact our support to get the help you need.</p>
-        <a href="faq.html" class="cta-blue">FAQ</a>  
+      <section class="newsletter">
+        <div class="newsletter-text">
+          <h1>Congratulations!</h1>
+          <p>You are now part of the Rainy Days community.</p>
+          <p>Get ready to receive exclusive offers, updates on new arrivals, and insider tips for your next outdoor adventure straight to your inbox.</p>
+          <P>Use the code RAINYNEWS to get 15% off your next purchase!</P>
+          <a href="shop.html" class="cta-blue">Go to shop</a>    
+        </div>
       </section>
 
-      <section class="contact-flex">
-
-        <div class="contact-support">
-          <section class="contact-container">
-            <div>
-              <h2>Customer support</h2>
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/headset-icon.png"alt="headphones" class="contact-icon">
-              <p>+47 10 20 30 40</p> 
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/location-icon.png"alt="map pin" class="contact-icon">
-              <p>Rainystreet 1 0180 Oslo</p>
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/email-icon.png"alt="envelope" class="contact-icon">
-              <p>support@rainydays.com</p>
-            </div>
-            <a href="contact-form.html" class="cta-blue">Send us a message</a>
-          </section>
-    
-          <section class="contact-text">
-            <p><span class="bold">Customer support:</span> Our dedicated customer support team is here to assist you with any questions or concerns you may have. Whether you need help with sizing, product recommendations, or assistance with your order, we're just a message away.</p>
-            <p><span class="bold">Visit us:</span> If you're in the area, we'd love for you to stop by our store and say hello! Our friendly team is always happy to meet fellow outdoor enthusiasts and share our passion for adventure.</p>
-            <p><span class="bold">Feedback and Suggestions:</span> We value your feedback and are constantly striving to improve our products and services. If you have any suggestions for how we can better serve you, please don't hesitate to let us know. Your input helps us continue to grow and evolve as a brand.</p>
-          </section>  
-        </div>
-  
-        <div class="contact-connect">
-          <section class="contact-container">
-            <div>
-              <h2>Connect</h2>
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/facebook-icon-black.png" alt="facebook icon" class="contact-icon">
-              <p>Facebook</p>  
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/instagram-icon-black.png" alt="instagram icon" class="contact-icon">
-              <p>Instagram</p>
-            </div>
-            <div class="contact-type">
-              <img src="assets/icons/download-mail-icon.png" alt="newsletter icon" class="contact-icon">
-              <p>Subscribe to our newsletter</p>
-            </div>
-            <input type="text" placeholder="mail@example.com" class="connect-input">
-            <a href="newsletter.html" class="cta-blue">Subscribe</a>
-          </section>
-    
-          <section class="contact-text">
-            <p><span class="bold">Connect with us:</span> Stay connected with Rainy Days on social media for the latest news, updates, and behind-the-scenes content. Follow us on Facebook and Instagram to join our community of outdoor enthusiasts and adventure seekers.</p>
-            <p>No matter how you choose to reach out, rest assured that we're here to help. Your satisfaction is our top priority, and we're committed to providing you with exceptional service and support every step of the way.</p>
-          </section>  
-        </div>
-  
-      </section>
 
     </main>
 
