--- a/contact-form.html
+++ b/contact-form.html
@@ -109,9 +109,14 @@
       </section>
     </form>
 
-    <section class="contact-form-submit">
-      <a href="#" class="cta-blue">submit</a>
-      <!--How do I make an overlay?-->
+    <section class="submit-overlay">
+      <input type="checkbox" id="submit-checkbox">
+      <label for="submit-checkbox">
+        <p class="cta-blue">SUBMIT</p>
+      </label>
+      <div class="submit-text">
+        <p>&#10003; Message submitted! We will get back to you as soon as possible!</p>
+      </div>
     </section>
 
   </main>
