--- a/newsletter.html
+++ b/newsletter.html
@@ -26,7 +26,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html" class="active">Contact</a></li>
+              <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </div>     
         </section>
@@ -43,7 +43,7 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="shop.html">Shop</a></li>
               <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html" class="active">Contact</a></li>
+              <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </nav>
         </section>
