code and style update on footer

--- a/TEST.html
+++ b/TEST.html
@@ -145,7 +145,47 @@
     </main>
 
     <footer>
-      <section class="footer-top">
+
+      <section class="footer-logo">
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo.png" alt="a mountain peak with Rainydays written underneath">
+        </a>
+      </section>
+
+      <section class="our-world">
+        <p class="bold">Our world</p>
+        <nav>
+          <a href="about-us.html">About us</a>
+          <a href="contact-us.html">Contact us</a>
+          <a href="faq.html">FAQ</a>
+        </nav>
+      </section>
+
+      <section class="follow-us">
+        <p class="bold">Follow us</p>
+        <div class="social-media">
+          <img src="assets/icons/facebook-icon.png" alt="facebook logo">
+          <p>Facebook</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/instagram-icon.png" alt="instagram logo">
+          <p>Instagram</p>
+        </div>
+      </section>
+      
+      <section class="footer-newsletter">
+        <p class="bold">Newsletter</p>
+        <p>Be the first to know about our latest drops, sales, news and more.</p>
+        <p>Join the Rainydays community!</p>
+        <div class="footer-newsletter-line">
+          <input type="text" id="footer-newsletter-input" placeholder="example@mail.com">
+          <label for="footer-newsletter-input">mail input</label>
+          <a href="newsletter.html">&#10003;</a>  
+        </div>
+      </section>
+      
+
+      <!--      <section class="footer-top">
 
         <div class="footer-logo">
           <a href="index.html">
@@ -203,30 +243,29 @@
           <div class="desktop-newsletter-mail">
             <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
             <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
-              <!--need to make an overlay when pressed-->
-          </div>  
-        </div>
-
-      </section>
-
-      <section class="footer-bottom">
-        <div class="footer-newsletter">
-          <div>
-            <p class="bold">Newsletter</p>
+            </div>  
           </div>
-          <div>
-            <p>Be the first to know about our latest drops,   sales, news and more.</p>
+  
+        </section>
+  
+        <section class="footer-bottom">
+          <div class="footer-newsletter">
+            <div>
+              <p class="bold">Newsletter</p>
+            </div>
+            <div>
+              <p>Be the first to know about our latest drops,   sales, news and more.</p>
+            </div>
+            <div>
+              <p>Join the Rainydays community!</p>
+            </div>
+            <div class="newsletter-mail">
+              <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
+              <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
+            </div>
           </div>
-          <div>
-            <p>Join the Rainydays community!</p>
-          </div>
-          <div class="newsletter-mail">
-            <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
-              <!--need to make an overlay when pressed-->
-          </div>
-        </div>
-      </section>
+        </section>
+  -->
 
     </footer>
 
