--- a/shop.html
+++ b/shop.html
@@ -145,89 +145,43 @@
     </main>
 
     <footer>
-      <section class="footer-top">
-
-        <div class="footer-logo">
-          <a href="index.html">
-            <img src="assets/icons/rainydays-logo.png" alt="Rainydays logo" class="footer-rainydays">  
-          </a>
-        </div>
-
-        <div class="our-world">
-          <div>
-            <p class="bold">Our world</p>
-          </div>
-          <div>
-            <nav>
-              <ul>
-                <li><a href="about-us.html">About us</a></li>
-                <li><a href="contact-us.html">Contact us</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-              </ul>
-            </nav>  
-          </div>  
-        </div>
-
-        <div class="follow-us">
-          <div>
-            <p class="bold">Follow us</p>
-          </div>
-          <div class="social-media">
-            <div>
-              <img src="assets/icons/facebook-icon.png" alt="Facebook icon" class="footer-icon">
-            </div>
-            <div>
-              <p>Facebook</p>
-            </div>
-          </div>
-          <div class="social-media">
-            <div>
-              <img src="assets/icons/instagram-icon.png" alt="Instagram icon" class="footer-icon">
-            </div>
-            <div>
-              <p>Instagram</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="desktop-newsletter">
-          <div>
-            <p class="bold">Newsletter</p>
-          </div>
-          <div>
-            <p>Be the first to know about our latest drops, sales, news and more.</p>
-          </div>
-          <div>
-            <p>Join the Rainydays community!</p>
-          </div>
-          <div class="desktop-newsletter-mail">
-            <input type="text" class="desktop-newsletter-mail-input"placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="desktop-newsletter-button" alt="checkmark icon">
-              <!--need to make an overlay when pressed-->
-          </div>  
-        </div>
-
+      <section class="footer-logo">
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo.png" alt="a mountain peak with Rainydays written underneath">
+        </a>
       </section>
 
-      <section class="footer-bottom">
-        <div class="footer-newsletter">
-          <div>
-            <p class="bold">Newsletter</p>
-          </div>
-          <div>
-            <p>Be the first to know about our latest drops,   sales, news and more.</p>
-          </div>
-          <div>
-            <p>Join the Rainydays community!</p>
-          </div>
-          <div class="newsletter-mail">
-            <input type="text"  class="newsletter-mail-input"placeholder="example@mail.com">
-            <img src="assets/icons/vector-icon.png" class="newsletter-button" alt="checkmark icon">
-              <!--need to make an overlay when pressed-->
-          </div>
-        </div>
+      <section class="our-world">
+        <p class="bold">Our world</p>
+        <nav>
+          <a href="about-us.html">About us</a>
+          <a href="contact-us.html">Contact us</a>
+          <a href="faq.html">FAQ</a>
+        </nav>
       </section>
 
+      <section class="follow-us">
+        <p class="bold">Follow us</p>
+        <div class="social-media">
+          <img src="assets/icons/facebook-icon.png" alt="facebook logo">
+          <p>Facebook</p>
+        </div>
+        <div class="social-media">
+          <img src="assets/icons/instagram-icon.png" alt="instagram logo">
+          <p>Instagram</p>
+        </div>
+      </section>
+      
+      <section class="footer-newsletter">
+        <p class="bold">Newsletter</p>
+        <p>Be the first to know about our latest drops, sales, news and more.</p>
+        <p>Join the Rainydays community!</p>
+        <div class="footer-newsletter-line">
+          <input type="text" id="footer-newsletter-input" placeholder="example@mail.com">
+          <label for="footer-newsletter-input">mail input</label>
+          <a href="newsletter.html">&#10003;</a>  
+        </div>
+      </section>
     </footer>
 
   </body>
