code and styling on header

--- a/contact-us.html
+++ b/contact-us.html
@@ -14,59 +14,41 @@
   <body>
 
     <header>
-      <div class="header-top">
+      <section class="header-menu">
+        <input type="checkbox" id="hamburger-checkbox">
+        <label for="hamburger-checkbox">
+          <img src="assets/icons/burger-menu.png">
+        </label>
+        <nav class="header-nav">
+          <a href="index.html">Home</a>
+          <a href="shop.html">Shop</a>
+          <a href="about-us.html">About</a>
+          <a href="contact-us.html" class="active">Contact</a>
+        </nav>
+      </section>
 
-        <section class="hamburger-menu">
-          <input type="checkbox">
-          <span></span>
-          <span></span>
-          <span></span>
-          <div class="hamburger-menu-links">
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
-              <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html" class="active">Contact</a></li>
-            </ul>
-          </div>     
-        </section>
+      <section>
+        <a href="index.html">
+          <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
+        </a>
+      </section>
 
-        <section class="rainydays-logo">
-          <a href="index.html">
-            <img src="assets/icons/rainydays-logo-cropped.png" alt="a mountain peak with rainydays written underneath">
-          </a>
-        </section>
-
-        <section class="desktop-nav">
-          <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="shop.html">Shop</a></li>
-              <li><a href="about-us.html">About</a></li>
-              <li><a href="contact-us.html" class="active">Contact</a></li>
-            </ul>
-          </nav>
-        </section>
-
-        <section class="search-field-desktop">
-          <input type="text" class="search-field">
-          <img src="assets/icons/search-icon.png" class="search-icon" alt="icon of a magnifying glass">
-        </section>
-
-        <section class="backet-container">
-          <img src="assets/icons/basket-icon-white.png" alt="basket icon for shopping cart" class="basket-icon">
-        </section>  
-
-      </div>
-
-      <div class="header-bottom">
-
-        <section class="search-field-mobile">
-          <input type="text" class="search-field">
-          <img src="assets/icons/search-icon.png" class="search-icon">
-        </section>
-
-      </div>
+      <section class="header-end">
+        <div class="header-search">
+          <input type="text" id="header-search-input">
+          <label for="header-search-input">
+            <img src="assets/icons/search-icon.png">
+          </label>
+          <div class="search-overlay">
+            <p>&#9888; This function is not yet available</p>
+          </div>
+        </div>
+        <div class="header-basket">
+          <a href="checkout.html">
+            <img src="assets/icons/basket-white.png">
+          </a>  
+        </div>
+      </section>
     </header>
 
     <main>
