alt text on header

--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -18,7 +18,7 @@
       <section class="header-menu">
         <input type="checkbox" id="hamburger-checkbox">
         <label for="hamburger-checkbox">
-          <img src="../assets/icons/burger-menu.png">
+          <img src="../assets/icons/burger-menu.png" alt="icon for dropdown menu">
         </label>
         <nav class="header-nav">
           <a href="../index.html">Home</a>
@@ -38,7 +38,7 @@
         <div class="header-search">
           <input type="text" id="header-search-input">
           <label for="header-search-input">
-            <img src="../assets/icons/search-icon.png">
+            <img src="../assets/icons/search-icon.png" alt="icon of magnifying glass to search">
           </label>
           <div class="search-overlay">
             <p>&#9888; This function is not yet available</p>
@@ -46,7 +46,7 @@
         </div>
         <div class="header-basket">
           <a href="checkout.html">
-            <img src="../assets/icons/basket-white.png">
+            <img src="../assets/icons/basket-white.png" alt="basket icon to get to checkout">
           </a>  
         </div>
       </section>
