--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
     <main>
 
-      <section class="banner" tabindex="0">
+      <section class="banner">
         <h1>Weatherproof your adventures</h1>
         <h2><span class="underline">Conquer</span> the elements</h2>
         <a href="shop.html" class="cta-orange">Go to shop</a>
       </section>
       
       <a href="shop.html">
-        <section class="sale" tabindex="0">
+        <section class="sale">
           <div class="sale-info">
               <p class="sale-title">End of season <span class="orange">sale</span></p>
               <p class="sale-text">Get up to <span class="orange sale-percent">50% off</span></p>
@@ -75,14 +75,14 @@
       <section class="shop">
         <p class="title">Shop our latest trends</p>
         <div class="shop-section"> 
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/images/shop-womens.jpg" alt="woman wearing hiking gear" class="shop-image">
             <div class="shop-container-info">
               <p>Where style meets durability</p>
               <a href="shop.html" class="cta-orange">Shop womens</a>
             </div>
           </div>
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/images/shop-mens.jpg" alt="man wearing hiking gear" class="shop-image">
             <div class="shop-container-info">
               <p>Where durability meets style</p>
@@ -98,42 +98,42 @@
         <div class="activity-section">
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/hiking.jpg" alt="a woman hiking in the mountains" class="activity-image">
               <p class="activity-button">Hiking</p>
             </div>  
           </a>
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/running.jpg" alt="four friends running" class="activity-image">
               <p class="activity-button">Running</p>
             </div>  
           </a>
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/canooing.jpg" alt="a couple sitting in a canoo" class="activity-image">
               <p class="activity-button">Canooing</p>
             </div>  
           </a>
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/cyckling.jpg" alt="a man riding a bicycle on a road" class="activity-image">
               <p class="activity-button">Cyckling</p>
             </div>  
           </a>
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/sailing.jpg" alt="a couple on a sailboat" class="activity-image">
               <p class="activity-button">Sailing</p>
             </div>  
           </a>
 
           <a href="shop.html">
-            <div class="activity-container" tabindex="0">
+            <div class="activity-container">
               <img src="assets/images/skiing.jpg" alt="a woman skiing down a mountainside" class="activity-image">
               <p class="activity-button">Skiing</p>
             </div>  
