--- a/shop.html
+++ b/shop.html
@@ -67,7 +67,7 @@
       <section class="shop">
 
         <a href="products/xplorer-fleece.html">
-        <div class="shop-container" tabindex="0">
+        <div class="shop-container">
           <img src="assets/products/jacket-1.png" alt="a fleece jacket in the color evening green, with full front zip">
           <p>Xplorer fleece jacket</p>
           <p class="bold orange">NOK 1499</p>
@@ -75,7 +75,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-2.png" alt="a lightweight runner jacket, in the color black">
             <p>RunnerPluss jacket</p>
             <p class="bold orange">NOK 999</p>
@@ -83,7 +83,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-3.png" alt="a bright red cross-country jacket with reflective details">
             <p>RacerPro jacket</p>
             <p class="bold orange">NOK 1599</p>
@@ -91,7 +91,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-4.png" alt="a jacket with extra padding and waistline belt, in the color orange and grey">
             <p>Adventurer jacket</p>
             <p class="bold orange">NOK 1499</p>
@@ -99,7 +99,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-5.png" alt="a black jacket with a wite stripe over the chest">
             <p>Softshell explorer jacket</p>
             <p class="bold orange">NOK 999</p>
@@ -107,7 +107,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-6.png" alt="a lightgrey jacket with full front-zip and waistline stretch">
             <p>Everyday weather jacket</p>
             <p class="bold orange">NOK 1599</p>
@@ -115,7 +115,7 @@
         </a>
 
         <a href="products/xplorer-fleece.html">
-          <div class="shop-container" tabindex="0">
+          <div class="shop-container">
             <img src="assets/products/jacket-7.png" alt="a dark grey jacket with pockets on the chest">
             <p>TrackerPro jacket</p>
             <p class="bold orange">NOK 1499</p>
