--- a/checkout.html
+++ b/checkout.html
@@ -110,7 +110,7 @@
           <label for="street-address">Street address</label>
           <input type="text" id="street-address" name="street-address" placeholder="Street address" required>
           <label for="postal-code">Postal code</label>
-          <input type="number" id="postal-code"name="postal-code" placeholder="Postal code" required>
+          <input type="number" id="postal-code" name="postal-code" placeholder="Postal code" required>
           <label for="city">City</label>
           <input type="text" id="city" name="city" placeholder="City" required>
           <label for="country">Country</label>
@@ -161,14 +161,14 @@
         <div>
           <input type="radio" name="payment" value="visa" id="visa">
           <label for="visa">
-            <img src="assets/icons/visa.png">
+            <img src="assets/icons/visa.png" alt="visa icon">
             Visa
           </label>
         </div>
         <div>
           <input type="radio" name="payment" value="mastercard" id="mastercard">
           <label for="mastercard">
-            <img src="assets/icons/mastercard.png">
+            <img src="assets/icons/mastercard.png" alt="mastercard icon">
             Mastercard
           </label>
         </div>
@@ -176,7 +176,7 @@
           <label for="card-number">Card number</label>
           <input type="number" id="card-number" name="card-number" placeholder="1020 3040 5060 7080" required>
           <label for="expiration-date">Expiration-date</label>
-          <input type="numnber" id="expiration-date" name="expiration-date" placeholder="MM/YY" required>
+          <input type="number" id="expiration-date" name="expiration-date" placeholder="MM/YY" required>
           <label for="cvc">CVC</label>
           <input type="number" id="cvc" name="cvc" placeholder="123" required>
         </section>  
