--- a/faq.html
+++ b/faq.html
@@ -87,7 +87,7 @@
         <details class="faq-container">
           <summary>What activities are Rainy Days jackets suitable for?</summary>
           <p>Our jackets are designed for a wide range of outdoor activities, including hiking, camping, backpacking, skiing, snowboarding, commuting, and everyday wear. Whether you're exploring the wilderness or navigating city streets, our jackets have you covered.</p>
-        </details class="faq-container">
+        </details>
   
         <details class="faq-container">
           <summary>How do I care for my Rainy Days jacket?</summary>
