--- a/contact-form.html
+++ b/contact-form.html
@@ -75,13 +75,13 @@
     <form class="contact-form">
       <section class="contact-form-info">
         <label for="firstname">First name</label>
-        <input type="text" id="firstname" name="firstname" placeholder="Name" required/>
+        <input type="text" id="firstname" name="firstname" placeholder="Name" required>
         <label for="lastname">Last name</label>
-        <input type="text" id="lastname" name="lastname" placeholder="Last name" required/>
+        <input type="text" id="lastname" name="lastname" placeholder="Last name" required>
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="name@example.com" required/>
+        <input type="email" id="email" name="email" placeholder="name@example.com" required>
         <label for="subject">Subject</label>
-        <input type="text" id="subject" name="subject" placeholder="Subject" required/>  
+        <input type="text" id="subject" name="subject" placeholder="Subject" required>
       </section>
       <section>
         <div class="contact-form-message">
@@ -93,9 +93,7 @@
 
     <section class="submit-overlay">
       <input type="checkbox" id="submit-checkbox">
-      <label for="submit-checkbox">
-        <p class="cta-blue">SUBMIT</p>
-      </label>
+      <label for="submit-checkbox" class="cta-blue">SUBMIT</label>
       <div class="submit-text">
         <p>&#10003; Message submitted! We will get back to you as soon as possible!</p>
       </div>
