fixed link on product specific

--- a/products/xplorer-fleece.html
+++ b/products/xplorer-fleece.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="header-basket">
-          <a href="checkout.html">
+          <a href="../checkout.html">
             <img src="../assets/icons/basket-white.png" alt="basket icon to get to checkout">
           </a>  
         </div>
